samples/_failures_safe/1761430540_8e3505_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_575df5e9.c: In function ‘main’:
./samples/SAFE/__tmp_575df5e9.c:188:16: error: expected ‘;’ at end of input
  188 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_575df5e9.c:188:9: error: expected declaration or statement at end of input
  188 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_575df5e9.c:188:9: error: expected declaration or statement at end of input
